# katepart-script

./: 4to5.sh  CMakeLists.txt  README.md  build.sh  build5.sh  columnize.zsh  gen.sh  test.sh  update_cmakelists.sh
abbreviations/: cpp
commands/: alias.js  align.js  apply.js  case.js  change.js  count.js  cpp.js  cursor.js  detach.js  diffSelection.js  document-utils.js  duplicate.js  echap.js  encodeuri.js  eval.js  insert.js  interval.js  join2.js  jumpContext.js  jumpParagraph.js  jumpUnmatchingIndent.js  jumpWord.js  kill.js  length.js  line.js  markSelection.js  merge.js  mv.js  newline.js  nreplace.js  organizer.js  random.js  range.js  repeat.js  reverse.js  rewindSelection.js  rm.js  rmNCharacter.js  romanNumeral.js  selecBlock.js  (+10 more)
doc-script/: create-function-help.sh  doc.html  function-help.xml  functions-descriptions-to-function-help.xsl  functions-descriptions.xml  functions-descriptions.xsl  index
generators/: abbreviations5.js
katepart5/: .gitignore  cmd5-concat.sh  header5-extractor.lua
libraries/: array-utils.js  cursor-command.js  cursor-utils.js  document-utils.js  each.js  edit.js  forEach.js  getCommandOrThrowError.js  insertion.js  interpretStr.js  leftAlgorithm.js  object-utils.js  position.js  regex-utils.js  removeThenInsertText.js  selectionOrLine.js  show-command.js  stepper.js  string-utils.js  stringOrRegex.js  text.js  toBoolean.js
tests/: alias.cpp  align.cpp  calln.cpp  case.cpp  change.cpp  count.cpp  duplicate.cpp  encodeUri.cpp  escape.cpp  insert.cpp  ints.cpp  jumpParagraph.cpp  main.cpp  tag.cpp  test.hpp  tr.cpp  (+2 more)
(+34 files in other folders)
